--- a/app/src/main/res/layout/fragment_die.xml
+++ b/app/src/main/res/layout/fragment_die.xml
@@ -12,7 +12,10 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal|center_vertical"
         android:text="0"
-        android:textSize="96sp" />
+        android:textSize="96sp"
+        tools:context=".DieFragment"/>
+
+
 
 
 
