--- a/app/src/main/res/layout/fragment_die.xml
+++ b/app/src/main/res/layout/fragment_die.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DieFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/dieTextView"
         android:layout_width="match_parent"
@@ -13,10 +15,8 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="0"
         android:textSize="96sp"
-        tools:context=".DieFragment"/>
-
-
-
+        tools:context=".DieFragment" />
 
 
 </FrameLayout>
+
